--- a/client/src/components/GameTable/GameTable_style.css
+++ b/client/src/components/GameTable/GameTable_style.css
@@ -1,12 +1,37 @@
 .container
 {
+  z-index: 7;
   display: flex;
   justify-content: center;
-  text-decoration: none;
+  width:700px;
+  height: 700px;
+  margin: 300px;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+}
+
+
+th
+{
+  padding-bottom: 50px;
+  font-size: 3em;
+  color: rgb(244, 247, 251);
   
 }
 
-td
+td 
 {
-  text-decoration: none;
+  font-size: 2em;
+  color: rgb(244, 247, 251);
+  
+  
 }
+
