--- a/client/src/components/GameTable/GameTable_style.css
+++ b/client/src/components/GameTable/GameTable_style.css
@@ -1,22 +1,23 @@
 .container
 {
-  z-index: 7;
+  position: relative;
+  z-index: 10;
   display: flex;
   justify-content: center;
-  width:700px;
-  height: 700px;
-  margin: 300px;
+  width:fit-content;
+  height:fit-content;
+  margin-top: 200px;
+  margin-left: 700px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.1);
   overflow: hidden;
-  display: flex;
-  justify-content: center;
   align-items: center;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-left: 1px solid rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
 }
+
 
 
 th
