--- a/client/src/components/GameTable/GameTable_style.css
+++ b/client/src/components/GameTable/GameTable_style.css
@@ -2,36 +2,24 @@
 {
   z-index: 7;
   display: flex;
-  justify-content: center;
-  width:700px;
-  height: 700px;
-  margin: 300px;
+  flex-direction: column;
+  width: 98%;
+  /* height: 700px; */
+  margin: 5% auto;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.1);
   overflow: hidden;
-  display: flex;
-  justify-content: center;
   align-items: center;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-left: 1px solid rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
 }
 
-
-th
+h3
 {
-  padding-bottom: 50px;
-  font-size: 3em;
-  color: rgb(244, 247, 251);
-  
-}
-
-td 
-{
+  padding-bottom: 10px;
   font-size: 2em;
   color: rgb(244, 247, 251);
-  
-  
 }
 
