--- a/client/src/components/Navbar/Navbar_style.css
+++ b/client/src/components/Navbar/Navbar_style.css
@@ -1,37 +1,17 @@
-*
-{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+.startBtn {
+  margin: 20% 0 0;
+
 }
 
-/* .containernavbar
-{
-position: relative;
-z-index: 3;
-width: calc(100% - 100px);
-min-height: calc(100vh - 280px);
-min-height: 300px;
-background: rgba(255, 255, 255, 0.05);
-box-shadow: 0 15px 35px rgba(255, 255, 255, 0.05);
-border-radius: 20px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 50px;
-} */
-
-header
-{
-  position: fixed;
+header {
+  width: 90%;
+  padding-bottom: 10px;
+  padding-top: 10px;
   z-index: 4;
-  top: 300px;
-  right: 80px;
-  left: 80px;
-  padding: 20px 50px;
+  top: 60px;
+  padding: 5% 4.8%;
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   align-items: center;
   background: rgba(255, 255, 255, 0.2);
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.05);
@@ -39,40 +19,35 @@ header
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5); 
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-header .logo
-{
+header .logo {
   color: rgb(244, 247, 251);
   font-weight: 700;
   text-decoration: none;
   font-size: 2em;
 }
 
-header ul
-{
+header ul {
   display: flex;
 }
 
-header ul li
-{
-  list-style:none;
-  margin: 0 10px;
+header ul li {
+  list-style: none;
+  /* margin: 0 10px; */
 }
 
-header ul li a
-{
-  color: rgb(10, 40, 107);
+header ul li a {
+  color: rgb(115 130 165);
   font-weight: 500;
   text-decoration: none;
-  padding:  8px 15px;
+  /* padding: 8px 15px; */
   border-radius: 25px;
 }
 
-header ul li a:hover ,
-header ul li a.active 
-{
+header ul li a:hover,
+header ul li a.active {
   background: #fff;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
